flux/apps/pinfra/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: mosquitto.ereslibre.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto
            port:
              number: 8883
  tls:
  - hosts:
    - mosquitto.ereslibre.net
    secretName: mosquitto-certs
